Change Markdown comment to ©

--- a/site/manual.html
+++ b/site/manual.html
@@ -84,7 +84,9 @@
 </td></tr>
 <tr><td style="width: 392px"><code>```</code> <br><code>#code block</code> <br><code>return 3</code> <br><code>```</code></td><td style="width: 177px"><pre><code># code block
 return 3</code></pre></td></tr>
-<tr><td style="width: 392px"><code>i&gt; indented block</code></td><td style="width: 177px">indented block</td></tr>
+<tr><td style="width: 392px"><code>© comment</code></td><td style="width: 177px"><aside class="comment">comment</aside></td></tr>
+<tr><td style="width: 392px"><code>3+ spaces at left margin</code></td><td style="width: 177px"><div class="indented"><p>indented block</p>
+</div></td></tr>
 <tr><td style="width: 392px"><code>C&gt; Centered block</code></td><td style="width: 177px">Centered block</td></tr>
 </table>
 <p>Begin a line with <code>*****</code> to get a horzontal rule.</p>
