Fix examples comment.

--- a/site/examples.html
+++ b/site/examples.html
@@ -173,7 +173,8 @@ Say that we want to build a cylindrical water tank in 5-foot courses.
 <p><span class="hurmet-calc" data-entry="[x; y; z] = (3, 2, 1; 2, 3, 1; 1, 2, 3)⁻¹ [39; 34; 26] = ?"></span></p>
 
 <h2>Reviews</h2>
-<p><span class="hurmet-comment" data-comment="Don’t forget diffs."><span class="left-triangle"></span><span class="comment-payload"><span><span>Don’t forget diffs.</span></span></span></span>Reviewers can write comments that are visibly different than the document.</p>
+<aside class="comment">Don’t forget diffs.</aside>
+<p>Reviewers can write comments that are visibly different than the document.</p>
 <p>You can save a document snapshot and later display the difference between the snapshot and the current document.</p>
 
 <h2>User-Defined Functions</h2>
