Overload ∈ to find property of a dataframe

--- a/site/manual.html
+++ b/site/manual.html
@@ -588,7 +588,7 @@ total                       | sumAbove()``</code></pre><p>will render like this:
 <tr><td><code>&gt;</code></td><td></td><td></td></tr>
 <tr><td>≤</td><td></td><td>auto-correct: &lt;=</td></tr>
 <tr><td>≥</td><td></td><td>auto-correct: &gt;=</td></tr>
-<tr><td>∈</td><td><math><mrow><mi>c</mi><mo>∈</mo></mrow><mrow><mi>s</mi></mrow></math></td><td>Is an element of a matrix or is a character of a string, or is a property of a single-row data frame<br>auto-correct: \in</td></tr>
+<tr><td>∈</td><td><math><mrow><mi>c</mi><mo>∈</mo></mrow><mrow><mi>s</mi></mrow></math></td><td>Is an element of a matrix or<br>is a character of a string, or<br>is a property of a data frame.<br>auto-correct: \in</td></tr>
 <tr><td>∉</td><td><math><mrow><mi>c</mi><mo>∉</mo></mrow><mrow><mi>s</mi></mrow></math></td><td>Is not an element of<br>auto-correct: \notin</td></tr>
 <tr><td>⊆</td><td><math><mrow><mi>c</mi><mo>⊆</mo></mrow><mrow><mi>s</mi></mrow></math></td><td>Is a subset of<br> auto-correct: \subseteq</td></tr>
 <tr><td>⊈</td><td><math><mrow><mi>c</mi><mo>⊈</mo></mrow><mrow><mi>s</mi></mrow></math></td><td>Is not a subset of<br> auto-correct: \nsubseteq</td></tr>
